introduce name length limit and prevent title overflow

--- a/scss/_item.scss
+++ b/scss/_item.scss
@@ -23,6 +23,7 @@
   > h3 {
     font-weight: 900;
     font-size: 1.5em;
+    overflow-wrap: break-word;
   }
 
   > img {
